fixed a bug where artifact would not build + implemented user-id retrieval on-login